objects/Course_Rate__c/Course_Rate__c.object-meta.xml
<CustomObject>
    <label>Course Rate</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Rates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>