objects/Course_Rate__c/fields/Course_Rate__c.field-meta.xml
<CustomField>
    <fullName>Course_Rate__c</fullName>
    <label>Course Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>