objects/Course_Rate__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADX201-Admin Essentials for New Admins</fullName>
            </value>
            <value>
                <fullName>ADX211-Admin Essentials for Experienced Admins</fullName>
            </value>
            <value>
                <fullName>DEX403-Declarative Development for Platform App Builders</fullName>
            </value>
            <value>
                <fullName>ADX231-Introduction to Apex &amp; Object Oriented Programming</fullName>
            </value>
            <value>
                <fullName>DEX450-Programatic Development with Apex &amp; Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>